Fixed mobile overflow by hiding it LOL

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -6,6 +6,7 @@ html, body, #root {
     min-height: 100%;
     font-size: 2vw;
     font-family: 'Bubblegum Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 html {
